<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>batzorigt.rentsen</groupId>
	<artifactId>rest-api-template</artifactId>
	<version>1.0.0</version>

	<properties>
		<encoding>UTF-8</encoding>
		<ebean.version>13.20.1</ebean.version>
		<javalin.version>5.6.1</javalin.version>
		<jte.version>3.0.1</jte.version>
		<mapstruct.version>1.5.5.Final</mapstruct.version>
		<lombok.version>1.18.28</lombok.version>
		
	</properties>

	<profiles>
		<profile>
			<id>default.database.config</id>
			<activation>
				<property>
					<name>!env.DB_HOST_NAME</name>
				</property>
			</activation>
			<properties>
				<env.DB_HOST_NAME>localhost</env.DB_HOST_NAME>
				<env.DB_NAME>rapit</env.DB_NAME>
				<env.DB_USER_NAME>username</env.DB_USER_NAME>
				<env.DB_PASSWORD>password</env.DB_PASSWORD>
			</properties>
		</profile>
	</profiles>

	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
				<excludes>
					<exclude>dbmigration/**</exclude>
					<exclude>jte/**</exclude>
					<exclude>**/.DS_Store/**</exclude>
					<exclude>**/.gitignore/**</exclude>
				</excludes>
			</resource>
		</resources>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.11.0</version>
				<configuration>
					<source>20</source>
					<target>20</target>
					<compilerArgs>--enable-preview</compilerArgs> 
					
					<excludes>
						<exclude>dbmigration/**</exclude>
						<exclude>jte/**</exclude>
						<exclude>**/.DS_Store/**</exclude>
						<exclude>**/.gitignore/**</exclude>
					</excludes>

					<annotationProcessorPaths>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
							<version>${lombok.version}</version>
						</path>
						<path>
							<groupId>org.mapstruct</groupId>
							<artifactId>mapstruct-processor</artifactId>
							<version>${mapstruct.version}</version>
						</path>
						<path>
							<groupId>io.ebean</groupId>
							<artifactId>querybean-generator</artifactId>
							<version>${ebean.version}</version>
						</path>
					</annotationProcessorPaths>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>3.1.0</version>
				<configuration>
					<mainClass>rest.api.API</mainClass>
					<systemProperties>
						<systemProperty>
							<key>-javaagent:</key>
							<value>ebean-agent-${ebean.version}.jar</value>

							<key>log4j2.contextSelector</key>
							<value>org.apache.logging.log4j.core.async.AsyncLoggerContextSelector</value>
						</systemProperty>
					</systemProperties>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.5.0</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<transformers>
								<transformer
									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
									<mainClass>rest.api.API</mainClass>
									<manifestEntries>
										<Multi-Release>true</Multi-Release>
									</manifestEntries>
								</transformer>
							</transformers>
							<filters>
								<filter>
									<artifact>batzorigt.rentsen:rest-api-template</artifact>
									<excludes>
										<exclude>rest/api/GenerateDbMigration.class</exclude>
										<exclude>dbmigration/**</exclude>
										<exclude>jte/**</exclude>
										<exclude>**/.DS_Store/**</exclude>
										<exclude>**/.gitignore/**</exclude>
									</excludes>
								</filter>
							</filters>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>io.repaint.maven</groupId>
				<artifactId>tiles-maven-plugin</artifactId>
				<version>2.36</version>
				<extensions>true</extensions>
				<configuration>
					<tiles>
						<tile>io.ebean.tile:enhancement:${ebean.version}</tile>
					</tiles>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.1.2</version>
				<configuration>
		            <argLine>--enable-preview</argLine>
		        </configuration>
			</plugin>
			<plugin>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>3.1.2</version>
			</plugin>
			<plugin>
				<groupId>com.google.cloud.tools</groupId>
				<artifactId>jib-maven-plugin</artifactId>
				<version>3.3.2</version>
				<configuration>
					<from>
						<image>eclipse-temurin:20.0.2_9-jre-alpine</image>
					</from>
					<to>
						<image>${project.groupId}.${project.artifactId}</image>
					</to>
					<container>
						<creationTime>USE_CURRENT_TIMESTAMP</creationTime>
						<jvmFlags>
							<jvmFlag>--enable-preview</jvmFlag>
							<jvmFlag>-javaagent:ebean-agent-${ebean.version}.jar</jvmFlag>
							<jvmFlag>-Dlog4j2.formatMsgNoLookups=true</jvmFlag>
							<jvmFlag>-Dlog4j2.contextSelector=org.apache.logging.log4j.core.async.AsyncLoggerContextSelector</jvmFlag>
							<jvmFlag>-Dlog4j.configurationFile=file:/log4j2.xml</jvmFlag>
							<jvmFlag>-Xms256m</jvmFlag>
							<jvmFlag>-Xmx448m</jvmFlag>
						</jvmFlags>
						<mainClass>rest.api.API</mainClass>
					</container>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>buildTar</goal>
						</goals>
					</execution>
				</executions>
				</plugin>
				<plugin>
					<groupId>gg.jte</groupId>
					<artifactId>jte-maven-plugin</artifactId>
					<version>${jte.version}</version>
					<configuration>
						<sourceDirectory>${basedir}/src/main/resources/jte</sourceDirectory>
						<targetDirectory>${basedir}/src/main/jib/jte-classes</targetDirectory>
						<contentType>Html</contentType>
					</configuration>
					<executions>
						<execution>
							<phase>process-classes</phase>
							<goals>
								<goal>precompile</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
		</plugins>
	</build>

	<dependencies>
		<dependency>
			<groupId>io.javalin</groupId>
			<artifactId>javalin</artifactId>
			<version>${javalin.version}</version>
		</dependency>
		<dependency>
		    <groupId>jakarta.validation</groupId>
		    <artifactId>jakarta.validation-api</artifactId>
		    <version>3.0.2</version>
		</dependency>

		<dependency>
			<groupId>org.hibernate.validator</groupId>
			<artifactId>hibernate-validator</artifactId>
			<version>8.0.1.Final</version>
		</dependency>
		<dependency>
			<groupId>org.hibernate.validator</groupId>
			<artifactId>hibernate-validator-annotation-processor</artifactId>
			<version>8.0.1.Final</version>
		</dependency>
		<dependency>
			<groupId>javax.el</groupId>
			<artifactId>javax.el-api</artifactId>
			<version>3.0.0</version>
		</dependency>
		<dependency>
		    <groupId>io.javalin</groupId>
		    <artifactId>javalin-micrometer</artifactId>
		    <version>${javalin.version}</version>
		</dependency>
		<dependency>
		    <groupId>io.micrometer</groupId>
		    <artifactId>micrometer-registry-prometheus</artifactId>
		    <version>1.11.2</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.12.0</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-collections4</artifactId>
			<version>4.4</version>
		</dependency>
		<dependency>
			<groupId>org.mapstruct</groupId>
			<artifactId>mapstruct</artifactId>
			<version>${mapstruct.version}</version>
		</dependency>
		<dependency>
			<groupId>gg.jte</groupId>
			<artifactId>jte</artifactId>
			<version>${jte.version}</version>
		</dependency>
		<dependency>
		    <groupId>com.sun.mail</groupId>
		    <artifactId>jakarta.mail</artifactId>
		    <version>2.0.1</version>
		</dependency>

		<dependency>
		    <groupId>org.slf4j</groupId>
		    <artifactId>slf4j-api</artifactId>
		    <version>2.0.7</version>
		</dependency>

		<dependency>
		    <groupId>org.apache.logging.log4j</groupId>
		    <artifactId>log4j-slf4j2-impl</artifactId>
		    <version>2.20.0</version>
		</dependency>

		<dependency>
			<groupId>com.lmax</groupId>
			<artifactId>disruptor</artifactId>
			<version>3.4.4</version>
		</dependency>

		<dependency>
			<groupId>org.aeonbits.owner</groupId>
			<artifactId>owner</artifactId>
			<version>1.0.12</version>
		</dependency>
		<dependency>
			<groupId>io.ebean</groupId>
			<artifactId>ebean</artifactId>
			<version>${ebean.version}</version>
		</dependency>
		<dependency>
			<groupId>io.ebean</groupId>
			<artifactId>ebean-querybean</artifactId>
			<version>${ebean.version}</version>
		</dependency>
		<!-- <dependency> -->
		<!-- <groupId>mysql</groupId> -->
		<!-- <artifactId>mysql-connector-java</artifactId> -->
		<!-- <version>8.0.27</version> -->
		<!-- <scope>runtime</scope> -->
		<!-- </dependency> -->
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<version>42.6.0</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.15.2</version>
		</dependency>
		<dependency>
			<groupId>com.konghq</groupId>
			<artifactId>unirest-java</artifactId>
			<version>3.14.5</version>
			<classifier>standalone</classifier>
		</dependency>
		<dependency>
			<groupId>au.com.flyingkite</groupId>
			<artifactId>mobiledetect</artifactId>
			<version>1.1.1</version>
		</dependency>

		<dependency>
			<groupId>io.ebean</groupId>
			<artifactId>ebean-ddl-generator</artifactId>
			<version>${ebean.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jaxb</groupId>
			<artifactId>jaxb-runtime</artifactId>
			<version>4.0.3</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>${lombok.version}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>io.ebean</groupId>
			<artifactId>ebean-test</artifactId>
			<version>${ebean.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>5.10.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-junit-jupiter</artifactId>
			<version>5.4.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.jmockit</groupId>
			<artifactId>jmockit</artifactId>
			<version>1.49</version>
			<scope>test</scope>
		</dependency>

		<!-- TODO use later in production to enhance load time -->
		<!-- java -javaagent:ebean-agent-${ebean.version}.jar rest-api-template.jar -->

		<!-- <dependency> -->
		<!-- <groupId>io.ebean</groupId> -->
		<!-- <artifactId>ebean-agent</artifactId> -->
		<!-- <version>${ebean.version}</version> -->
		<!-- </dependency> -->
	</dependencies>


</project>